--- a/housekeeping_project/asset/templates/base.html
+++ b/housekeeping_project/asset/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Housekeeping</title>
+		<title>Surface Tension</title>
 		
 		<link rel="stylesheet" href="{% static 'asset/css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'asset/css/main.css' %}">
