--- a/housekeeping_project/asset/templates/header.html
+++ b/housekeeping_project/asset/templates/header.html
@@ -3,6 +3,6 @@
 <nav class="navbar bg-primary">
 	<a class="navbar-brand text-light">
 		<img src="{% static 'asset/img/logo.jpg' %}" height="40" width="40" alt="" class="d-inline-block align-top ml-3 mr-md-2 navbar-logo">
-		<span class="align-bottom navbar-title">Housekeeping</span>
+		<span class="align-bottom navbar-title">Surface Tension</span>
 	</a>
 </nav>
